--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:$rootProject.mapVersion"
     implementation "com.google.android.gms:play-services-location:$rootProject.mapVersion"
     implementation "com.google.android.gms:play-services-places:$rootProject.mapVersion"
+    implementation "com.google.android.gms:play-services-awareness:$rootProject.mapVersion"
 
     // Room components
     implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
