--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
     implementation "android.arch.work:work-runtime:$rootProject.workVersion"
+
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
