--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation "android.arch.work:work-runtime:$rootProject.workVersion"
 
     implementation 'com.google.code.gson:gson:2.8.2'
+
+//    //For communication among activity fragment and service
+//    implementation 'org.greenrobot:eventbus:3.1.1'
 }
