tuning thresholds; 2s update interval; morning update fixed (seems)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
         <receiver android:name=".receivers.ServiceRestartReceiver" android:enabled="true"  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <!--<action android:name="android.intent.action.QUICKBOOT_POWERON"/>-->
                 <category android:name="android.intent.category.DEFAULT"/>
                 <!--<action android:name=".RestartSensor"/>-->
             </intent-filter>
