--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="it.polimi.steptrack">
     <uses-feature android:name="android.hardware.location.gps" android:required="true"/>
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
@@ -27,11 +28,13 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".BasicApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_tracking"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_tracking"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
